css/twitter.css
:root {
    --main-bg: #E6ECF0;
    --link-color: #3B94D9;
    --main-link-color: #848487;
    --light-bg: #FFF;
    --separator-color: #DDD;
}
* {
    box-sizing: border-box;
}
body, html {
    background-color: var(--main-bg);
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
    font-family: Arial, Ubuntu, sans-serif;
}
header {
    background-image: url("https://picsum.photos/1200/300");
    background-size: cover;
    min-height: 300px;
    padding-top: 275px;
}
.container{
    margin: 2em;
}
a {
    color: var(--link-color);
}
.top-nav {
    background: var(--light-bg);
    width: 100%;
    position: fixed;
    z-index: 1000;
}
.nav {
    list-style-type: none;
    padding: 0;
    margin: 0;

}
.nav-item{
    display: inline-block;
    padding:1.5em;

}
.nav-link {
    color: var(--main-link-color);
    font-weight: bold;
    text-decoration: none;

}
.nav-link:hover {
    color: var(--link-color);
}
.profile {
    background: var(--light-bg);
    height: 80px;
}
.profile-form{
float: right;
    line-height: 80px;

}
.profile-details, .timeline,.who-to-follow{
    float: left;
    margin: .5em 0;
}
.profile-details{
    width: calc(25% - .5em);
}
.profile-items{
    list-style: none;
    padding: 0px;
}
.profile-entry{
    margin: .5em;
}
.profile-header{
    position: relative;
}
.profile-image{
    position: absolute;
    top: -40px;

}
.timeline{
    width: calc(50% - .5em);
}
.who-to-follow{
    width: calc(25% - .5em);
}


.btn {
    border: 1px solid var(--main-link-color);
    color: var(--main-link-color);
    background: var(--light-bg);
    font-weight: bold;
    padding: 8px;
    border-radius: 5px;

}
.btn-large {
    font-size: 1.3em;
    padding: 10px;
}
.img-circle {
    border-radius: 100%;
    border: 4px solid var(--light-bg);
}
.text-right {
    text-align: right;
}
.text-muted {
    color: var(--main-link-color);
}
.media{
    width: 100%;
    background: var(--light-bg);
    border-bottom: 1px solid var(--separator-color);
    padding: .5em;
    overflow: auto;
}
.media-image{
    max-width: 50px;
    margin-top: 1.33em;
    float: left;
}
.media-body{
    float: left;
}

